--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # next.js
 /.next/
@@ -18,13 +11,11 @@
 
 # misc
 .DS_Store
-.env*
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Environment Variables
 .env
 .env.build
+
+# IDEs
+.idea/
+.vscode/
