--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "build": {
     "env": {
-      "NPM_RC": "@NPM_RC"
+      "NPM_RC": "registry=https://npm.pkg.github.com/goproperly"
     }
   }
 }
