--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@goproperly/linoleum": "^5.2.0",
     "next": "^9.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.26.5",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
